--- a/src/index.css
+++ b/src/index.css
@@ -800,6 +800,10 @@
     color: var(--color-gray-400);
   }
 
+  .text-green-400 {
+    color: var(--color-green-400);
+  }
+
   .text-white {
     color: var(--color-white);
   }
